UI for the timer

--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section><h1>Timer Scacchi Scam</h1></section>
-    <div class="contenitore">
-      <div class="contenitore_timer countdown" id="top_timer">00:00</div>
-      <div class="contenitore_timer countdown" id="bottom_timer">00:00</div>
+    <header style="color: white"><h1>Timer Scacchi Scam</h1></header>
+    <main></main>
+    <div id="contenitore">
+      <div class="timerP1">00:00</div>
+      <div id="spacer"></div>
+      <div class="timerP2">00:00</div>
+      <img src="scacchiera.jpg">
     </div>
-    <section name="selettore tempo">
+        <section name="selettore tempo">
+      <p>
       Formato tempo (minuti):<br />
+      </p>
       <button>60'</button>
       <button>30'</button>
       <button>15'</button>
